# Circleplot

./: CMakeLists.txt  CircleSpots.kml  Circleplot.cpp  Circleplot.h  Draw.cpp  Draw.h  Exporter.cpp  Exporter.h  Makefile  README.md  Sample.kml  Spot1.kml  Spot2.kml  Spot3.kml  Utility.cpp  Utility.h  contributors.txt  data.txt  hello_world.cpp  lineparser.py  sample_data.txt
GeographicLib/: Makefile  config.status  libtool
GeographicLib/cmake/: Makefile
GeographicLib/doc/: Makefile
GeographicLib/doc/html/: index.html  utilities.html
GeographicLib/examples/: Makefile
GeographicLib/include/: Makefile
GeographicLib/include/GeographicLib/: Config-ac.h  Config.h
GeographicLib/man/: Makefile
GeographicLib/matlab/: Makefile
GeographicLib/python/: Makefile
GeographicLib/src/: Accumulator.lo  AlbersEqualArea.lo  AzimuthalEquidistant.lo  CassiniSoldner.lo  CircularEngine.lo  DMS.lo  Ellipsoid.lo  EllipticFunction.lo  GeoCoords.lo  Geocentric.lo  Geodesic.lo  GeodesicExact.lo  GeodesicLine.lo  GeodesicLineExact.lo  Geohash.lo  Geoid.lo  Gnomonic.lo  GravityCircle.lo  GravityModel.lo  LambertConformalConic.lo  LocalCartesian.lo  MGRS.lo  MagneticCircle.lo  MagneticModel.lo  Makefile  NormalGravity.lo  OSGB.lo  PolarStereographic.lo  PolygonArea.lo  SphericalEngine.lo  TransverseMercator.lo  TransverseMercatorExact.lo  UTMUPS.lo  libGeographic.la
GeographicLib/tools/: Makefile
GeographicLib/tools/.deps/: CartConvert.Po  ConicProj.Po  GeoConvert.Po  GeodSolve.Po  GeodesicProj.Po  GeoidEval.Po  Gravity.Po  MagneticField.Po  Planimeter.Po  TransverseMercatorProj.Po
libzip/: CMakeCache.txt
